fix overflow issues on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,7 +41,7 @@ button {
   cursor: pointer;
 }
 
-body {
+.plan-card {
   position: relative;
   background-color: var(--Very-Light-Grayish-Blue);
   width: 100%;
@@ -52,7 +52,7 @@ body {
   overflow-x: hidden;
 }
 
-body::before {
+.plan-card::before {
   content: "";
   width: 100%;
   height: 65rem;
